# ring-buffer

./: Makefile.am  README  configure.ac  kroki-ring-buffer.spec.in
src/: Makefile.am  kroki-ring-buffer.c  libkroki-ring-buffer.c
src/kroki/: ring_buffer.h
src/kroki/bits/: ring_buffer.h
